--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,6 @@ fabric.properties
 !.idea/runConfigurations
 
 # End of https://www.toptal.com/developers/gitignore/api/svelte,node,typings,dotenv,vim,visualstudiocode,webstorm+all
+
+.dev.vars*
+!.dev.vars.example
