--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"schema-dts": "^1.1.5",
+		"sitemap": "^9.0.0",
 		"svelte": "^5.41.0",
 		"svelte-check": "^4.3.3",
 		"tailwindcss": "^4.1.14",
