--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
 		"deploy": "pnpm run build && wrangler pages deploy",
 		"cf-typegen": "wrangler types src/worker-configuration.d.ts"
 	},
+	"packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c",
+	"dependencies": {
+		"@fontsource-variable/nunito": "^5.2.7",
+		"@fontsource/pacifico": "^5.2.7"
+	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
