--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
 	},
 	"packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c",
 	"dependencies": {
-		"@fontsource-variable/nunito": "^5.2.7",
-		"@fontsource/pacifico": "^5.2.7"
+		"@fontsource-variable/inter": "^5.2.8",
+		"@fontsource-variable/syne": "^5.2.7",
+		"luxon": "^3.7.2"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
@@ -28,6 +29,7 @@
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.14",
+		"@types/luxon": "^3.7.1",
 		"@types/node": "^22",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
