fix: harden nonce based strict csp
- Removed plausible analytics script tag and added tag via NPM.
- Set no-store cache-control headers.

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,7 @@
 
 CF_PAGES=0
 # CF_PAGES_BRANCH does not matter if CF_PAGES is not 1
-CF_PAGES_BRANCH="develop"
+CF_PAGES_BRANCH=develop
+
+### Plausible Analytics ###
+PUBLIC_PLAUSIBLE_DOMAIN=example.com
