--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.2.8",
 		"@fontsource-variable/syne": "^5.2.7",
+		"@plausible-analytics/tracker": "0.4.4",
 		"luxon": "^3.7.2"
 	},
 	"devDependencies": {
